--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
 .todo-frame {
   width: 500px;
   height: 700px;
-  background-color: hsla(0, 4%, 26%, 0.229);
+  background-color: rgb(255, 255, 255);
   margin-top: 5rem;
   border-radius: 10px;
-  border: 1px solid gray;
-  box-shadow: 5px 5px 10px gray;
+  box-shadow: 0px 0px 20px rgb(0, 0, 0);
+  padding: 20px;
 }
+
+
 
 body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgb(147, 194, 240)
 }
 
 h1{
@@ -22,4 +25,13 @@ h1{
 .todo-p {
   display: inline;
   margin-right: 10px;
+}
+
+.add-form-input {
+  border-radius: 10px;
+  height: 30px;
+  font-size: large;
+  border: 1px solid red;
+  background-color: aliceblue;
+  outline: none;
 }
